--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,5 +29,11 @@ http {
 
     #gzip  on;
 
+    #### Set up upstream server for translation server
+    upstream translation-server {
+        server translation-server:5000;
+    }
+    ####
+
     include /etc/nginx/conf.d/*.conf;
 }
